# tesis

./: .gitignore  instalar_ipp_opencv  instalar_ipp_openni_opencv  instalar_ipp_y_opencv  instalar_pcl  links.txt
codigo/: 03_detector_estatico_seguimiento_icp_con_modelo.py  Makefile  analisis.py  analisis_overlapping_tablas.py  analisis_precision_recall.py  buscadores.py  corridas.py  corridas_rgb.py  corridas_rgbd.py  deteccion_estatica.py  detector_estatico_icp.py  detector_estatico_seguimiento_icp.py  detector_estatico_seguimiento_icp_con_modelo.py  detector_estatico_sin_deteccion.py  detectores.py  esquemas_seguimiento.py  icp_con_modelo.py  icp_following.cpp  icp_following.h  icp_sin_modelo.py  main.cpp  metodos_comunes.py  metodos_de_busqueda.py  observar_seguimiento.py  proveedores_de_imagenes.py  prueba_follow.py  pruebas.py  rgbd.h  seguidores.py  seguidores_rgb.py  seguidores_rgbd.py  tesis.komodoproject  tipos_basicos.h
codigo/cpp/: Makefile
codigo/seguimiento/: esquemas_generales.py  metodos_comunes.py  (+5 more)
codigo/tutoriales/tutoriales_pcl/icp_transformation_detection/icp_a_secas/: CMakeLists.txt  ejemplo1.txt  ejemplo2.txt
latex/: Makefile  abs_en.tex  abs_esp.tex  agradecimientos.tex  alignment_prerejective_pseudocode.py  caratula.tex  conclusiones.tex  count_abs_esp_words.py  desarrollo.tex  icp_pseudocode.py  introduccion.tex  resultados.tex  tesis.bib  tesis.tex  tuneos.tex
opencv/: background_substraction.py  ejemplos_python_cookbook  instalacion
papers/: Para buscar papers.txt
presentacion/: Makefile  presentacion.tex
xtion/: instalar_openni
(+237 files in other folders)
